Add clickable web browser settings links (#1481)

--- a/ext/permissions.html
+++ b/ext/permissions.html
@@ -129,7 +129,7 @@
                         When enabled, Yomichan is able to scan text and show definitions in private/incognito web browser windows.
                     </p>
                     <p>
-                        This option can be configured from the web browser's extension settings pages.
+                        This option can be configured from the web browser's <a class="extension-settings-link" data-special-url="chrome://extensions/?id={id}">extension settings pages</a>.
                     </p>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                         When enabled, Yomichan is able to scan text and show definitions on local HTML files located using the <code>file://*</code> scheme.
                     </p>
                     <p data-show-for-browser="chrome edge">
-                        This option can be configured from the web browser's extension settings pages.
+                        This option can be configured from the web browser's <a class="extension-settings-link" data-special-url="chrome://extensions/?id={id}">extension settings pages</a>.
                     </p>
                 </div>
             </div>
@@ -193,9 +193,11 @@
 <script src="/js/data/permissions-util.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/html-template-collection.js"></script>
+<script src="/js/dom/selector-observer.js"></script>
 <script src="/js/pages/settings/permissions-toggle-controller.js"></script>
 <script src="/js/pages/settings/persistent-storage-controller.js"></script>
 <script src="/js/pages/settings/settings-controller.js"></script>
+<script src="/js/pages/settings/settings-display-controller.js"></script>
 
 <script src="/js/pages/permissions-main.js"></script>
 
