Add workaround for a frequency disambiguation layout issue on Firefox (#1489)

--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -56,11 +56,11 @@
 <template id="term-frequency-item-template" data-remove-whitespace-text="true"><span class="frequency-item"><span class="tag tag-has-body frequency-tag" data-category="frequency" data-frequency-type="term">
     <span class="tag-label"><span class="tag-label-content"></span></span>
     <span class="tag-body"><span class="tag-body-content frequency-body">
-        <ruby class="frequency-disambiguation">
+        <span class="frequency-disambiguation"><ruby>
             <span class="frequency-disambiguation-expression"></span>
             <span class="frequency-disambiguation-separator"></span>
             <rt class="frequency-disambiguation-reading"></rt>
-        </ruby>
+        </ruby></span>
         <span class="frequency-separator"></span>
         <span class="frequency-value"></span>
     </span></span>
