--- a/ext/popup.html
+++ b/ext/popup.html
@@ -104,6 +104,7 @@
 <script src="/js/display/display-history.js"></script>
 <script src="/js/display/display-notification.js"></script>
 <script src="/js/display/display-profile-selection.js"></script>
+<script src="/js/display/display-resizer.js"></script>
 <script src="/js/display/query-parser.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
 <script src="/js/dom/document-util.js"></script>
