Refactor furigana segment data (#1502)
* Remove redundant language assignment

* Segment furigana from DisplayGenerator

* Remove furiganaSegments from translator data

* Add backwards compatibility for furiganaSegments

* Update tests

--- a/ext/display-templates.html
+++ b/ext/display-templates.html
@@ -31,7 +31,7 @@
     <div class="debug-info"><a class="debug-log-link">Log debug info to console</a></div>
 </div></template>
 <template id="expression-template" data-remove-whitespace-text="true"><div class="expression">
-    <div class="expression-text-container" lang="ja">
+    <div class="expression-text-container">
         <span class="expression-text-outer source-text">
             <span class="expression-current-indicator"></span>
             <span class="expression-text"></span>
