--- a/ext/background.html
+++ b/ext/background.html
@@ -39,6 +39,7 @@
 <script src="/js/dom/native-simple-dom-parser.js"></script>
 <script src="/js/general/cache-map.js"></script>
 <script src="/js/general/object-property-accessor.js"></script>
+<script src="/js/general/regex-util.js"></script>
 <script src="/js/general/text-source-map.js"></script>
 <script src="/js/language/deinflector.js"></script>
 <script src="/js/language/dictionary-data-util.js"></script>
