Fix dictionary image support (#1526)
* Fix content security policy for images

* Add createBlobFromBase64Content to MediaUtil

* Update MediaLoader to use MediaUtil

* Use blob URLs when importing dictionaries

* Update VM's URL to support createObjectURL and revokeObjectURL

* Fix test

--- a/ext/popup.html
+++ b/ext/popup.html
@@ -123,6 +123,7 @@
 <script src="/js/language/text-scanner.js"></script>
 <script src="/js/media/audio-system.js"></script>
 <script src="/js/media/media-loader.js"></script>
+<script src="/js/media/media-util.js"></script>
 <script src="/js/media/text-to-speech-audio.js"></script>
 <script src="/js/script/dynamic-loader.js"></script>
 <script src="/js/templates/template-renderer-proxy.js"></script>
