Fix invalid commas in HTML (#1533)

--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -20,7 +20,7 @@
         data-start-offset="0"
         data-end-node-selector="span"
         data-end-offset="0"
-        data-result-type="TextSourceRange",
+        data-result-type="TextSourceRange"
         data-sentence-scan-extent="100"
         data-sentence="真白「心配してくださって、ありがとございます」"
     >
@@ -36,7 +36,7 @@
         data-start-offset="5"
         data-end-node-selector="span"
         data-end-offset="5"
-        data-result-type="TextSourceRange",
+        data-result-type="TextSourceRange"
         data-sentence-scan-extent="100"
         data-sentence="心配してくださって、ありがとございます"
     >
@@ -52,7 +52,7 @@
         data-start-offset="16"
         data-end-node-selector="span"
         data-end-offset="16"
-        data-result-type="TextSourceRange",
+        data-result-type="TextSourceRange"
         data-sentence-scan-extent="100"
         data-sentence="心配して「くださって」、ありがと「ございます」"
     >
@@ -68,7 +68,7 @@
         data-start-offset="4"
         data-end-node-selector="span"
         data-end-offset="4"
-        data-result-type="TextSourceRange",
+        data-result-type="TextSourceRange"
         data-sentence-scan-extent="100"
         data-sentence="ありがとございます。"
     >
@@ -84,7 +84,7 @@
         data-start-offset="14"
         data-end-node-selector="span"
         data-end-offset="14"
-        data-result-type="TextSourceRange",
+        data-result-type="TextSourceRange"
         data-sentence-scan-extent="100"
         data-sentence="ありがとございます。"
     >
@@ -100,7 +100,7 @@
         data-start-offset="0"
         data-end-node-selector="input"
         data-end-offset="0"
-        data-result-type="TextSourceRange",
+        data-result-type="TextSourceRange"
         data-sentence-scan-extent="100"
         data-sentence="真白「心配してくださって、ありがとございます」"
         data-has-imposter="true"
@@ -117,7 +117,7 @@
         data-start-offset="0"
         data-end-node-selector="textarea"
         data-end-offset="0"
-        data-result-type="TextSourceRange",
+        data-result-type="TextSourceRange"
         data-sentence-scan-extent="100"
         data-sentence="真白「心配してくださって、ありがとございます」"
         data-has-imposter="true"
@@ -134,7 +134,7 @@
         data-start-offset="0"
         data-end-node-selector="button"
         data-end-offset="0"
-        data-result-type="TextSourceElement",
+        data-result-type="TextSourceElement"
         data-sentence-scan-extent="100"
         data-sentence="よみちゃん"
     >
