Refactor Translator and dictionary entry format (#1553)
* Update test data

* Move translator.js

* Create new version of Translator

* Update Backend

* Update DictionaryDataUtil

* Update DisplayGenerator

* Create AnkiNoteDataCreator

* Replace AnkiNoteData with AnkiNoteDataCreator

* Update tests

* Remove AnkiNoteData

* Update test data

* Remove translator-old.js

* Add TypeScript interface definitions for the new translator data format

--- a/ext/template-renderer.html
+++ b/ext/template-renderer.html
@@ -17,7 +17,7 @@
 <!-- Scripts -->
 <script src="/lib/handlebars.min.js"></script>
 
-<script src="/js/data/anki-note-data.js"></script>
+<script src="/js/data/anki-note-data-creator.js"></script>
 <script src="/js/language/dictionary-data-util.js"></script>
 <script src="/js/language/japanese-util.js"></script>
 <script src="/js/templates/template-renderer.js"></script>
