Add part of speech info (#1561)
* Add part of speech info to headwords

* Expose parts of speech to Anki template rendering

* Expose parts of speech

* Update pitch accent categories

* Update docs

* Add part-of-speech

* Update options and tests

* Update markers

* Update test data

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2652,6 +2652,10 @@
                     <td>List of definitions for the term, except the dictionary tag is omitted.</td>
                 </tr>
                 <tr>
+                    <td><code class="anki-field-marker">{part-of-speech}</code></td>
+                    <td>Part of speech information for the term.</td>
+                </tr>
+                <tr>
                     <td><code class="anki-field-marker">{pitch-accents}</code></td>
                     <td>List of pitch accent downstep notations for the term.</td>
                 </tr>
