Toggle option hotkey (#1571)
* Set up toggleOption hotkey action settings

* Update styles

* Disable spell check and autocomplete

* Add OptionToggleHotkeyHandler

* Improve auto-close behaviour

--- a/ext/search.html
+++ b/ext/search.html
@@ -89,6 +89,7 @@
 <script src="/js/display/display-generator.js"></script>
 <script src="/js/display/display-history.js"></script>
 <script src="/js/display/display-notification.js"></script>
+<script src="/js/display/option-toggle-hotkey-handler.js"></script>
 <script src="/js/display/query-parser.js"></script>
 <script src="/js/display/search-display-controller.js"></script>
 <script src="/js/dom/document-focus-controller.js"></script>
