Update dictionary entry terminology (#1592)
* Update terminology

* Update terminology in display.js

* Update terminology in display-audio.js

* Update terminology in text-scanner.js

* Update terminology in backend.js

* Update terminology in mecab.js

* Update terminology in audio-downloader.js

* Update terminology in translator-vm.js

* Update terminology in dictionary-data-util.js

* Update terminology in dictionary-database.js

* Update terminology in japanese-util.js

* Change/upgrade {expression} to {term}

* Update terminology in test-japanese.js

* Update terminology in test-database.js

* Update terminology in anki-templates-controller.js

* Update terminology in anki-note-builder.js

* Update terminology in backend.js

* Update terminology in text-scanner.js

* Update terminology in display.js

* Update terminology in display.js

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -2315,8 +2315,8 @@
             <div class="settings-item-children more" hidden>
                 <p>
                     The <em>URL</em> property specifies the URL format used for fetching audio clips in <em>Custom</em> mode.
-                    The replacement tags <code data-select-on-click="">{expression}</code> and <code data-select-on-click="">{reading}</code> can be used to specify which
-                    expression and reading is being looked up.<br>
+                    The replacement tags <code data-select-on-click="">{term}</code> and <code data-select-on-click="">{reading}</code> can be used to specify which
+                    term and reading is being looked up.<br>
                 </p>
                 <p>
                     The <em>Type</em> property specifies how the URL is handled when looking up audio:
@@ -2331,7 +2331,7 @@
                     </li>
                 </ul>
                 <p>
-                    Example URL: <a data-select-on-click="">http://localhost/audio.mp3?expression={expression}&amp;reading={reading}</a>
+                    Example URL: <a data-select-on-click="">http://localhost/audio.mp3?term={term}&amp;reading={reading}</a>
                 </p>
                 <p>
                     <a class="more-toggle" data-parent-distance="3">Less&hellip;</a>
