Initial safari compatibility (#1609)
* Update environment info to return the 'safari' browser

* Fix popup display on Safari

* Update environment assignment

* Add data-loading-stalled property when loading takes longer than expected

* Add notification when loading has stalled

* Allow getDictionaryInfo invocation on non-privileged contexts

* Update _validatePrivilegedMessageSender

* Don't listen to 'voiceschanged' event unless addEventListener is present

Also expose an event

--- a/ext/settings.html
+++ b/ext/settings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-browser="unknown" data-os="unknown" data-manifest-version="unknown">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -58,6 +58,23 @@
     <span tabindex="-1" id="content-scroll-focus"></span>
 
     <h1>Yomichan Settings</h1>
+
+    <!-- Notifications -->
+    <div class="settings-group settings-group-top-margin page-loading-stalled-notification">
+        <div class="settings-item"><div class="settings-item-inner settings-item-inner-wrappable">
+            <div class="settings-item-left">
+                <div class="settings-item-label">
+                    <p>
+                        This page is taking longer than expected to load.
+                    </p>
+                    <p data-show-for-browser="safari">
+                        Due to a bug in Safari, it may be necessary to click the <img src="/images/yomichan-icon.svg" class="inline-icon" alt=""> <em>Yomichan</em>
+                        button in the browser bar to fully load the page
+                    </p>
+                </div>
+            </div>
+        </div></div>
+    </div>
 
     <!-- Profile -->
     <div class="heading-container">
